# socratic_ai_backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.claude/agents/: fastapi-python-expert.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: crud.py  main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: __init__.py  auth.py  generation.py  questions.py  refinement.py  similarity.py
app/core/: config.py  db.py  middleware.py  rate_limit.py
app/schemas/: __init__.py  questions.py
app/services/: __init__.py  llm_client.py  pdf_parser.py  question_generator.py
scripts/: dev.sh  prestart.sh
tests/: __init__.py  conftest.py
tests/test_api/: test_auth.py  test_generation.py  test_questions.py  test_refinement.py  test_similarity.py
tests/test_core/: test_security.py
tests/test_crud/: test_crud.py
tests/test_services/: test_llm_client.py  test_pdf_parser.py  test_question_generator.py
